Version 1.0-M3 (2012-xx-xx)
---------------------------

- Removed `respondWithContentType`, `respondWithMediaType` directives (they didn't play well with content negotiation)
- Changed `parameters` directive with one argument
- renamed transform... directives to map...


Version 1.0-M2 (2012-05-16)
---------------------------
- spray-io

  + Added SslTlsSupport pipeline stage
  + Fixed SetTimeout messages not working
  + Fixed closing of already closed connections improperly handled
  + Fixed bug in wiring of certain pipeline stages
  + Dropped `confirm-sends` config setting, added `ack:Boolean` field to IoWorker.Send
  + Renamed `SendCompleted` event to `AckSend`
  + Made IoWorkerThread daemonic
  + Improved pipeline architecture for reduced call stack depth

- spray-can

  + Added SSL/TLS support to HttpServer and HttpClient
  + Added `ack-sends` setting to client and server config
  + Added 'transparent-head-requests' server config setting
  + Added HttpClient.SetRequestTimeout message
  + Fixed HttpServer not handling 'Expect: 100-continue' headers
  + Fixed HttpClient not properly handling HEAD requests to resources containing a message body
  + Fixed #99 (getFromFile(Name) sometimes throws IllegalStateException when streaming file content)
  + Fixed SetTimeout messages not working
  + Enabled validity verification on HttpRequests and HttpResponses
  + Extended HttpDialog to also accept ActorContexts as dispatcher container

- spray-base

  + http: fixed custom mediatypes not being matched
  + http: fixed ArrayIndexOutOfBoundsException during header parsing of unregistered CustomMediaTypes
  + http: fixed IPv6 Host header parsing failure
  + Fixed #108 (FormDataUnmarshaller should be more resilient)
  + Fixed incorrect error message in HttpContentExtractor
  + Fixed several memory leaks in streamMarshaller

- spray-server

  + Fixed actorSystem dependency in DebuggingDirectives incorrectly named
  + Make ErrorHandling#responseForException public
