@@ -83,21 +83,21 @@ class MiscDirectivesSpec extends RoutingSpec {
         jsonpWithParameter("jsonp") {
           complete(jsonResponse)
         }
-      } ~> check { entity === HttpBody(`application/javascript`, "someFunc([1,2,3])") }
+      } ~> check { body === HttpBody(`application/javascript`, "someFunc([1,2,3])") }
     }
     "not act on JSON responses if no jsonp parameter is present" in {
       Get() ~> {
         jsonpWithParameter("jsonp") {
           complete(jsonResponse)
         }
-      } ~> check { entity === jsonResponse.entity }
+      } ~> check { response.entity === jsonResponse.entity }
     }
     "not act on non-JSON responses even if a jsonp parameter is present" in {
       Get("/?jsonp=someFunc") ~> {
         jsonpWithParameter("jsonp") {
           complete(HttpResponse(entity = HttpBody(`text/plain`, "[1,2,3]")))
         }
-      } ~> check { entity === HttpBody(`text/plain`, "[1,2,3]") }
+      } ~> check { body === HttpBody(`text/plain`, "[1,2,3]") }
     }
   }
 
