@@ -4,6 +4,8 @@ Version 1.0-M3 (2012-xx-xx)
 - Removed `respondWithContentType`, `respondWithMediaType` directives (they didn't play well with content negotiation)
 - Changed `parameters` directive with one argument
 - renamed transform... directives to map...
+- Default Unmarshallers now accept emtpy input where it makes sense
+- Marshalling and Unmarshalling infrastructure completely redone
 
 
 Version 1.0-M2 (2012-05-16)
